removed the PermGen options for launching luke
on Java 8 the option is no longer needed.